Bug 559187 - Reduce memory consumption and improve performance
Make use of primitive values and Eclipse Collections in several places

Change-Id: Iae66d0b122e98d8bdfd0ae62c778348966e4e3b8
Signed-off-by: Dirk Fauth <dirk.fauth@googlemail.com>